--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "axios": "^1.0.0",
     "express": "^4.18.1",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "twilio": "^5.0.0-rc.1"
   }
 }
