package.json slow migration

--- a/apps/server/project.json
+++ b/apps/server/project.json
@@ -12,7 +12,7 @@
         "target": "node",
         "compiler": "tsc",
         "outputPath": "dist/apps/server",
-        "main": "apps/server/src/main.ts",
+        "main": "apps/server/src/index.ts",
         "tsConfig": "apps/server/tsconfig.app.json",
         "assets": ["apps/server/src/assets"],
         "webpackConfig": "apps/server/webpack.config.js"
