--- a/package.json
+++ b/package.json
@@ -35,9 +35,16 @@
     "url-loader": "^4.1.1"
   },
   "dependencies": {
+    "@mnpcmw6444/mongoose-auto-versioning": "^2.0.1",
+    "@sendgrid/mail": "^8.1.0",
     "axios": "^1.0.0",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
+    "mongoose": "^8.0.4",
     "tslib": "^2.3.0",
-    "twilio": "^5.0.0-rc.1"
+    "twilio": "^5.0.0-rc.1",
+    "web-push": "^3.6.6"
   }
 }
