--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,10 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@monorepo/server-provider": ["libs/server-provider/src/index.ts"],
+      "@monorepo/theme-provider": ["libs/theme-provider/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
