--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,9 @@
     "baseUrl": ".",
     "paths": {
       "@monorepo/server-provider": ["libs/server-provider/src/index.ts"],
-      "@monorepo/theme-provider": ["libs/theme-provider/src/index.ts"]
+      "@monorepo/theme-provider": ["libs/theme-provider/src/index.ts"],
+      "@monorepo/types": ["libs/types/src/index.ts"],
+      "@monorepo/utils": ["libs/utils/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
