--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
     "@testing-library/react": "14.0.0",
+    "@types/cookie-parser": "^1.4.6",
+    "@types/cors": "^2.8.17",
     "@types/express": "4.17.13",
     "@types/jest": "^29.4.0",
     "@types/node": "18.16.9",
