--- a/package.json
+++ b/package.json
@@ -56,23 +56,23 @@
     "url-loader": "^4.1.1",
     "vite": "^5.0.11",
     "vite-plugin-dts": "~3.7.0",
-    "vitest": "~1.2.0"
-  },
-  "dependencies": {
+    "vitest": "~1.2.0",
     "@emotion/react": "11.11.3",
     "@emotion/styled": "11.11.0",
+    "axios": "^1.6.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.21.2"
+  },
+  "dependencies": {
     "@mnpcmw6444/mongoose-auto-versioning": "^4.0.0",
     "@sendgrid/mail": "^8.1.0",
     "@swc/helpers": "~0.5.3",
-    "axios": "^1.6.5",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^8.0.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-router-dom": "6.21.2",
     "tslib": "^2.6.2",
     "twilio": "^5.0.0-rc.1",
     "web-push": "^3.6.6"
