--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "@babel/core": "^7.23.7",
     "@babel/preset-react": "^7.23.3",
     "@emotion/babel-plugin": "11.11.0",
+    "@emotion/react": "11.11.3",
+    "@emotion/styled": "11.11.0",
+    "@mui/material": "^5.15.4",
     "@nx/eslint": "17.2.8",
     "@nx/eslint-plugin": "17.2.8",
     "@nx/express": "^17.2.8",
@@ -38,6 +41,7 @@
     "@vitejs/plugin-react": "^4.2.1",
     "@vitest/coverage-v8": "~1.2.0",
     "@vitest/ui": "~1.2.0",
+    "axios": "^1.6.5",
     "eslint": "~8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "2.29.1",
@@ -49,20 +53,17 @@
     "jsdom": "~23.2.0",
     "nx": "^17.2.8",
     "prettier": "^3.2.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-refresh": "^0.14.0",
+    "react-router-dom": "6.21.2",
     "ts-jest": "^29.1.1",
     "ts-node": "10.9.2",
     "typescript": "~5.3.3",
     "url-loader": "^4.1.1",
     "vite": "^5.0.11",
     "vite-plugin-dts": "~3.7.0",
-    "vitest": "~1.2.0",
-    "@emotion/react": "11.11.3",
-    "@emotion/styled": "11.11.0",
-    "axios": "^1.6.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-router-dom": "6.21.2"
+    "vitest": "~1.2.0"
   },
   "dependencies": {
     "@mnpcmw6444/mongoose-auto-versioning": "^4.0.0",
