--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "@swc/cli": "~0.1.63",
     "@swc/core": "~1.3.102",
     "@testing-library/react": "14.1.2",
+    "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "4.17.21",
     "@types/jest": "^29.5.11",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "20.11.0",
     "@types/react": "18.2.47",
     "@types/react-dom": "18.2.18",
