--- a/package.json
+++ b/package.json
@@ -75,8 +75,10 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "glob": "^10.3.10",
     "mongoose": "^8.0.4",
     "swagger-autogen": "^2.23.7",
+    "swagger-ui-express": "^5.0.0",
     "tslib": "^2.6.2",
     "twilio": "^5.0.0-rc.1",
     "web-push": "^3.6.6"
