--- a/apps/server/template.env
+++ b/apps/server/template.env
@@ -1,2 +1,2 @@
-MONGO_URI=
+MONGO_URI=mongodb+srv://natanyoad:pU2L36PPrJ7ZgqR5@offisito-preprod.0qmlp13.mongodb.net/?retryWrites=true&w=majority
 NODE_ENV=
