--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/react": "18.2.47",
     "@types/react-dom": "18.2.18",
     "@types/swagger-ui-express": "^4.1.6",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
     "@vitejs/plugin-react": "^4.2.1",
