--- a/apps/server/template.env
+++ b/apps/server/template.env
@@ -1,2 +1,3 @@
-MONGO_URI=mongodb+srv://natanyoad:pU2L36PPrJ7ZgqR5@offisito-preprod.0qmlp13.mongodb.net/?retryWrites=true&w=majority
-NODE_ENV=
+MONGO_URI=mongodb+srv://natanyoad:pU2L36PPrJ7ZgqR5@offisito-preprod.0qmlp13.mongodb.net/?retryWrites=true&w=majority # yoad's account - our preprod db
+NODE_ENV=development
+SENDGRID=SG.... #starting with SG.
