--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-hot-toast": "^2.4.1",
     "react-refresh": "^0.14.0",
     "react-router-dom": "6.21.2",
+    "swagger-ts-generator": "^2.0.6",
     "ts-jest": "^29.1.1",
     "ts-node": "10.9.2",
     "typescript": "~5.3.3",
