--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
-    "upgrade:deps": "npx npm-check-updates -u"
+    "upgrade:deps": "npx npm-check-updates -u",
+    "swagger": "npx swagger-typescript-api -p ./swagger.json -o ./libs/types/src/api/auto -n autoApi.ts\n"
   },
   "private": true,
   "devDependencies": {
@@ -63,7 +64,6 @@
     "react-hot-toast": "^2.4.1",
     "react-refresh": "^0.14.0",
     "react-router-dom": "6.21.2",
-    "swagger-typescript-api": "^13.0.3",
     "ts-jest": "^29.1.1",
     "ts-node": "10.9.2",
     "typescript": "~5.3.3",
