--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "upgrade:deps": "npx npm-check-updates -u",
-    "swagger": "npx swagger-typescript-api -p ./swagger.json -o ./libs/types/src/api/auto -n autoApi.ts\n"
+    "swagger:gen-ts": "npx swagger-typescript-api -p ./swagger.json -o ./libs/types/src/api/auto -n autoApi.ts\n"
   },
   "private": true,
   "devDependencies": {
@@ -13,7 +13,7 @@
     "@emotion/babel-plugin": "11.11.0",
     "@emotion/react": "11.11.3",
     "@emotion/styled": "11.11.0",
-    "@mui/material": "^5.15.4",
+    "@mui/material": "^5.15.5",
     "@nx/eslint": "17.2.8",
     "@nx/eslint-plugin": "17.2.8",
     "@nx/express": "^17.2.8",
@@ -28,7 +28,7 @@
     "@svgr/webpack": "^8.1.0",
     "@swc-node/register": "~1.6.8",
     "@swc/cli": "~0.1.63",
-    "@swc/core": "~1.3.102",
+    "@swc/core": "~1.3.104",
     "@testing-library/react": "14.1.2",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.6",
@@ -36,17 +36,17 @@
     "@types/express": "4.17.21",
     "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.5",
-    "@types/node": "20.11.0",
-    "@types/react": "18.2.47",
+    "@types/node": "20.11.5",
+    "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
     "@types/swagger-ui-express": "^4.1.6",
     "@types/uuid": "^9.0.7",
     "@types/zxcvbn": "^4.4.4",
-    "@typescript-eslint/eslint-plugin": "^6.18.1",
-    "@typescript-eslint/parser": "^6.18.1",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "@typescript-eslint/parser": "^6.19.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "@vitest/coverage-v8": "~1.2.0",
-    "@vitest/ui": "~1.2.0",
+    "@vitest/coverage-v8": "~1.2.1",
+    "@vitest/ui": "~1.2.1",
     "axios": "^1.6.5",
     "eslint": "~8.56.0",
     "eslint-config-prettier": "^9.1.0",
@@ -58,19 +58,19 @@
     "jest-environment-node": "^29.7.0",
     "jsdom": "~23.2.0",
     "nx": "^17.2.8",
-    "prettier": "^3.2.1",
+    "prettier": "^3.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-refresh": "^0.14.0",
-    "react-router-dom": "6.21.2",
+    "react-router-dom": "6.21.3",
     "ts-jest": "^29.1.1",
     "ts-node": "10.9.2",
     "typescript": "~5.3.3",
     "url-loader": "^4.1.1",
-    "vite": "^5.0.11",
-    "vite-plugin-dts": "~3.7.0",
-    "vitest": "~1.2.0"
+    "vite": "^5.0.12",
+    "vite-plugin-dts": "~3.7.1",
+    "vitest": "~1.2.1"
   },
   "dependencies": {
     "@mnpcmw6444/mongoose-auto-versioning": "^4.0.0",
@@ -80,12 +80,12 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^8.0.4",
+    "mongoose": "^8.1.0",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.0",
     "tslib": "^2.6.2",
     "twilio": "^5.0.0-rc.1",
-    "web-push": "^3.6.6",
+    "web-push": "^3.6.7",
     "zxcvbn": "^4.4.2"
   }
 }
