--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "jest-environment-node": "^29.7.0",
     "jsdom": "~23.2.0",
     "nx": "^17.2.8",
+    "nx-cloud": "^16.5.2",
     "prettier": "^3.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
