--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           node-version: 20
           cache: 'npm'
-      - run: npm i
+      - run: npm ci
       - uses: nrwl/nx-set-shas@v3
       - run: git branch --track main origin/main
 
