--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "license": "MIT",
   "scripts": {
     "clean": "rm -rf node_modules dist package-lock.json swagger.json ./.nx/cache",
-    "upgrade:deps": "npx npm-check-updates -u",
-    "swagger:gen-ts": "npx swagger-typescript-api -p ./swagger.json -o ./libs/types/src/api/auto -n autoApi.ts\n"
+    "update": "npx npm-check-updates -u",
+    "audit": "npm audit fix",
+    "swagger": "npx swagger-typescript-api -p ./swagger.json -o ./libs/types/src/api/auto -n autoApi.ts\n"
   },
   "private": true,
   "devDependencies": {
