--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
       - run: npx nx affected -t lint,test,build --parallel=3
 
   deploy:
-    needs: build-test
+    needs: main
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
     steps:
