--- a/apps/server/Dockerfile
+++ b/apps/server/Dockerfile
@@ -1,17 +1,15 @@
 FROM node:lts as BUILDER
-#?ARG NPM
 WORKDIR /app
-COPY package.json /app/package.json
-COPY tsconfig.json /app/tsconfig.json
-#?COPY .npmrc /app/.npmrc
+COPY package*.json nx.json ./
+COPY libs/ libs/
 COPY src /app/src
-RUN npm run prod
-#?RUN npm run clean:prod
-#RUN npm i --omit=dev
-#?RUN rm -rf .npmrc
+RUN npm ci
+COPY apps/server/ apps/server/
+RUN nx build server
 
 FROM node:lts-slim
 WORKDIR /app
-COPY --from=builder /app/dist /app/dist
-CMD ["node", "./dist/index.cjs"]
-EXPOSE 6005
+COPY --from=build /app .
+CMD ["node", "apps/server/dist/main.js"]
+EXPOSE 6025
+
