--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.0",
