--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/swagger-ui-express": "^4.1.6",
     "@types/uuid": "^9.0.7",
     "@types/zxcvbn": "^4.4.4",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@vitejs/plugin-react": "^4.2.1",
     "axios": "^1.6.5",
     "eslint": "~8.56.0",
