--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -45,13 +45,28 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
+      - name: Get version from package.json
+        id: package_version
+        run: echo "::set-output name=version::$(jq -r .version apps/server/package.json)"
+        shell: bash
+
       - name: Build, tag, and push image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: offisito
-          IMAGE_TAG: latest
+          ECR_REPOSITORY: server
+          IMAGE_TAG: ${{ steps.package_version.outputs.version }}
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f apps/server/Dockerfile .
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+
+
+      - name: Build, tag, and guest server to Amazon ECR
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: guest
+          IMAGE_TAG: ${{ steps.package_version.outputs.version }}
+        run: |
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f apps/guest/Dockerfile .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
       # ... remaining steps for ECS task definition and deployment ...
