--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,4 +1,4 @@
-name: CI
+name: CICD
 on:
   push:
     branches:
@@ -22,25 +22,24 @@ jobs:
           cache: 'npm'
       - run: npm ci
       - uses: nrwl/nx-set-shas@v3
-
       - run: npx nx-cloud record -- nx format:check
       - run: npx nx affected -t lint,test,build --parallel=3
 
   build_and_push:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
-    #needs: prepare_with_nx
+    needs: prepare_with_nx
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Bump version and push tag
-        if: github.ref == 'refs/heads/main'
-        uses: phips28/gh-action-bump-version@v6.x
-        with:
-          tag-prefix: '' # Set this to your preference
-        env:
-          GITHUB_TOKEN: ${{ secrets.ITHUB_TOKEN }}
+      - name: Bump version
+        run: |
+          git config --global user.name 'github-actions'
+          git config --global user.email 'github-actions@github.com'
+          npm version patch -m "chore(release): bump version to %s [skip ci]"
+          git push --follow-tags
+        working-directory: apps/server
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -55,27 +54,27 @@ jobs:
 
       - name: Get version from package.json
         id: package_version
-        run: echo "::set-output name=version::$(jq -r .version apps/server/package.json)"
-        shell: bash
+        run: echo "::set-output name=version::$(cat package.json | jq -r .version)"
+        working-directory: apps/server
 
-      - name: Build, tag, and push image to Amazon ECR
+      - name: Build, tag, and push server image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: server
           IMAGE_TAG: ${{ steps.package_version.outputs.version }}
         run: |
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f apps/server/Dockerfile .
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f Dockerfile .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        working-directory: apps/server
 
-
-      - name: Build, tag, and guest server to Amazon ECR
+      - name: Build, tag, and push guest image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: guest
           IMAGE_TAG: ${{ steps.package_version.outputs.version }}
         run: |
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f apps/guest/Dockerfile .
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f Dockerfile .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        working-directory: apps/guest
 
-        # ... remaining steps for ECS task definition and deployment ...
-
+      # ... remaining steps for ECS task definition and deployment ...
