--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           node-version: '20.11.0'
           cache: 'npm'
-      - run: npm ci
+      - run: npm i
       - uses: nrwl/nx-set-shas@v3
       - run: npx nx-cloud record -- nx format:check
       - run: npx nx affected -t lint,test,build --parallel=3
