--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -37,9 +37,10 @@ jobs:
         run: |
           git config --global user.name 'github-actions'
           git config --global user.email 'github-actions@github.com'
-          git push https://${{ secrets.PERSONAL_ACCESS_TOKEN }}@github.com/${{ github.repository }} HEAD:${{ github.ref }}
-
+          git remote set-url origin https://${{ secrets.PERSONAL_ACCESS_TOKEN }}@github.com/${{ github.repository }}
+          git push origin HEAD:${{ github.ref_name }}
         working-directory: apps/server
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
