--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -33,12 +33,15 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Push changes
+      - name: Push Test
         run: |
-          git config --global user.name 'github-actions'
-          git config --global user.email 'github-actions@github.com'
-          git remote set-url origin https://${{ secrets.X_T }}@github.com/${{ github.repository }}
+          git config user.name 'github-actions'
+          git config user.email 'github-actions@github.com'
+          git remote set-url origin https://x-access-token:${{ secrets.PERSONAL_ACCESS_TOKEN }}@github.com/${{ github.repository }}
+          git commit --allow-empty -m "Test Push"
           git push origin HEAD:${{ github.ref_name }}
+
+
         working-directory: apps/server
 
       - name: Configure AWS credentials
