--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -33,14 +33,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Push Test
+      - name: Set up Git with SSH for pushing
         run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.ACTIONS_DEPLOY_KEY }}" > ~/.ssh/id_ed25519
+          chmod 600 ~/.ssh/id_ed25519
+          ssh-keyscan github.com >> ~/.ssh/known_hosts
           git config user.name 'github-actions'
           git config user.email 'github-actions@github.com'
-          git remote set-url origin https://x-access-token:${{ secrets.X_T }}@github.com/${{ github.repository }}
-          git commit --allow-empty -m "Test Push"
+          git remote set-url origin git@github.com:${{ github.repository }}.git
           git push origin HEAD:${{ github.ref_name }}
-
 
         working-directory: apps/server
 
