--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -33,17 +33,22 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Git with SSH for pushing
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.ACTIONS_DEPLOY_KEY }}" > ~/.ssh/id_ed25519
-          chmod 600 ~/.ssh/id_ed25519
-          ssh-keyscan github.com >> ~/.ssh/known_hosts
-          git config user.name 'github-actions'
-          git config user.email 'github-actions@github.com'
-          git remote set-url origin git@github.com:${{ github.repository }}.git
-          git push origin HEAD:${{ github.ref_name }}
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20.11.0'
 
+      - name: Bump version in package.json
+        run: |
+          npm version patch --no-git-tag-version
+          NEW_VERSION=$(node -p "require('./apps/server/package.json').version")
+          git commit -am "chore(release): bump version to $NEW_VERSION [skip ci]"
+          git tag v$NEW_VERSION
+
+      - name: Push changes
+        run: |
+          git push origin HEAD:${{ github.ref_name }}
+          git push origin --tags
         working-directory: apps/server
 
       - name: Configure AWS credentials
