--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Bump version in package.json
         run: |
           npm version patch --no-git-tag-version
-          NEW_VERSION=$(node -p "require('./apps/server/package.json').version")
+          NEW_VERSION=$(node -p "require('./package.json').version")
           git commit -am "chore(release): bump version to $NEW_VERSION [skip ci]"
           git tag v$NEW_VERSION
 
