--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -42,6 +42,8 @@ jobs:
         run: |
           npm version patch --no-git-tag-version
           NEW_VERSION=$(node -p "require('./package.json').version")
+          git config --global user.email "michael+cicd@offisito.com"
+          git config --global user.name "GitHub Action"
           git commit -am "chore(release): bump version to $NEW_VERSION [skip ci]"
           git tag v$NEW_VERSION
 
