--- a/libs/react-styles/package.json
+++ b/libs/react-styles/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@monorepo/theme-provider",
+  "name": "@monorepo/react-styles",
   "version": "0.0.1",
   "main": "./index.js",
   "types": "./index.d.ts",
