--- a/apps/server/template.env
+++ b/apps/server/template.env
@@ -1,2 +1,5 @@
-MONGO_URI=
-NODE_ENV=
+NODE_ENV=development
+WHITE_ENV=development
+JWT_SECRET=[#random]
+MONGO_URI=mongodb+srv://natanyoad:pU2L36PPrJ7ZgqR5@offisito-preprod.0qmlp13.mongodb.net/?retryWrites=true&w=majority # yoad's account - our preprod db
+SENDGRID=SG.... #starting with SG.
