--- a/libs/react-styles/tsconfig.json
+++ b/libs/react-styles/tsconfig.json
@@ -6,14 +6,14 @@
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "jsxImportSource": "@emotion/react",
-    "types": ["vite/client"]
+    "types": ["vite/client"],
   },
   "files": [],
   "include": [],
   "references": [
     {
-      "path": "./tsconfig.lib.json"
-    }
+      "path": "./tsconfig.lib.json",
+    },
   ],
-  "extends": "../../tsconfig.base.json"
+  "extends": "../../tsconfig.base.json",
 }
