--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "@monorepo/source",
-  "version": "0.1.0",
+  "version": "0.1.9",
   "license": "MIT",
   "scripts": {
-    "upgrade:deps": "npx npm-check-updates -u"
+    "clean": "rm -rf node_modules dist package-lock.json swagger.json ./.nx/cache",
+    "update": "npx npm-check-updates -u",
+    "audit": "npm audit fix",
+    "swagger": "npx swagger-typescript-api -p ./swagger.json -o ./libs/types/src/api/auto -n autoApi.ts\n"
   },
   "private": true,
   "devDependencies": {
-    "@babel/core": "^7.23.7",
-    "@babel/preset-react": "^7.23.3",
     "@emotion/babel-plugin": "11.11.0",
     "@emotion/react": "11.11.3",
     "@emotion/styled": "11.11.0",
-    "@mui/material": "^5.15.4",
+    "@mui/material": "^5.15.5",
     "@nx/eslint": "17.2.8",
     "@nx/eslint-plugin": "17.2.8",
     "@nx/express": "^17.2.8",
@@ -23,26 +24,20 @@
     "@nx/vite": "17.2.8",
     "@nx/webpack": "17.2.8",
     "@nx/workspace": "17.2.8",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
-    "@svgr/webpack": "^8.1.0",
-    "@swc-node/register": "~1.6.8",
-    "@swc/cli": "~0.1.63",
-    "@swc/core": "~1.3.102",
     "@testing-library/react": "14.1.2",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "4.17.21",
-    "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.5",
-    "@types/node": "20.11.0",
-    "@types/react": "18.2.47",
+    "@types/node": "20.11.5",
+    "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
-    "@typescript-eslint/eslint-plugin": "^6.18.1",
-    "@typescript-eslint/parser": "^6.18.1",
+    "@types/swagger-ui-express": "^4.1.6",
+    "@types/uuid": "^9.0.7",
+    "@types/zxcvbn": "^4.4.4",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "@vitest/coverage-v8": "~1.2.0",
-    "@vitest/ui": "~1.2.0",
     "axios": "^1.6.5",
     "eslint": "~8.56.0",
     "eslint-config-prettier": "^9.1.0",
@@ -51,33 +46,33 @@
     "eslint-plugin-react": "7.33.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.7.0",
-    "jest-environment-node": "^29.7.0",
     "jsdom": "~23.2.0",
     "nx": "^17.2.8",
-    "prettier": "^3.2.1",
+    "nx-cloud": "^16.5.2",
+    "prettier": "^3.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-refresh": "^0.14.0",
-    "react-router-dom": "6.21.2",
+    "react-router-dom": "6.21.3",
     "ts-jest": "^29.1.1",
     "ts-node": "10.9.2",
     "typescript": "~5.3.3",
-    "url-loader": "^4.1.1",
-    "vite": "^5.0.11",
-    "vite-plugin-dts": "~3.7.0",
-    "vitest": "~1.2.0"
+    "vite": "^5.0.12",
+    "vite-plugin-dts": "~3.7.1",
+    "vitest": "~1.2.1"
   },
   "dependencies": {
     "@mnpcmw6444/mongoose-auto-versioning": "^4.0.0",
     "@sendgrid/mail": "^8.1.0",
-    "@swc/helpers": "~0.5.3",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^8.0.4",
-    "tslib": "^2.6.2",
-    "twilio": "^5.0.0-rc.1",
-    "web-push": "^3.6.6"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.1.0",
+    "swagger-autogen": "^2.23.7",
+    "swagger-ui-express": "^5.0.0",
+    "zxcvbn": "^4.4.2"
   }
 }
