--- a/apps/server/template.env
+++ b/apps/server/template.env
@@ -1,5 +1,5 @@
 NODE_ENV=development
 WHITE_ENV=local
 JWT_SECRET=[#random]
-MONGO_URI=mongodb+srv://natanyoad:pU2L36PPrJ7ZgqR5@offisito-preprod.0qmlp13.mongodb.net/?retryWrites=true&w=majority # yoad's account - our preprod db
+MONGO_URI=mongodb+srv://natanyoad:pU2L36PPrJ7ZgqR5@offisito-preprod.0qmlp13.mongodb.net/offisito?retryWrites=true&w=majority # yoad's account - our preprod db
 SENDGRID=SG.... #starting with SG.
