--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "clean": "rm -rf node_modules dist package-lock.json swagger.json ./.nx/cache",
     "update": "npx npm-check-updates -u",
     "audit": "npm audit fix",
-    "swagger": "npx swagger-typescript-api -p ./swagger.json -o ./libs/types/src/api/auto -n autoApi.ts\n"
+    "swagger": "npx swagger-typescript-api -p ./swagger.json -o ./libs/types/src/api/auto -n autoApi.ts\n",
+    "build:guest": "tsc --outDir dist/apps/guest apps/guest/server.ts"
   },
   "private": true,
   "devDependencies": {
