--- a/apps/guest/Dockerfile
+++ b/apps/guest/Dockerfile
@@ -5,10 +5,11 @@ COPY libs/ libs/
 COPY apps/guest/ apps/guest/
 RUN npm i
 RUN npx nx build guest
+RUN npm run build:guest
 
 FROM node:lts-slim
 WORKDIR /app
 COPY --from=builder /app .
-CMD ["node", "dist/apps/server/main.js"]
+CMD ["node", "dist/apps/guest/server.js"]
 EXPOSE 6025
 
