--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -67,16 +67,24 @@ jobs:
         id: package_version
         run: echo "::set-output name=version::$(cat package.json | jq -r .version)"
 
+
+      - name: Set outputs
+        run: |
+          echo "ecr_registry=${{ steps.login-ecr.outputs.registry }}" >> $GITHUB_ENV
+          echo "image_tag=$(cat package.json | jq -r .version)" >> $GITHUB_ENV
+
+
+
   build_server:
     needs: prepare
     runs-on: ubuntu-latest
     steps:
       - name: Build, tag, and push server image to Amazon ECR
         env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: server
-          IMAGE_TAG: ${{ steps.package_version.outputs.version }}
         run: |
+          ECR_REGISTRY=${{ needs.prepare.outputs.ecr_registry }}
+          IMAGE_TAG=${{ needs.prepare.outputs.image_tag }}
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f ./apps/server/Dockerfile .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
@@ -87,10 +95,10 @@ jobs:
     steps:
       - name: Build, tag, and push guest image to Amazon ECR
         env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: guest
-          IMAGE_TAG: ${{ steps.package_version.outputs.version }}
         run: |
+          ECR_REGISTRY=${{ needs.prepare.outputs.ecr_registry }}
+          IMAGE_TAG=${{ needs.prepare.outputs.image_tag }}
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f ./apps/guest/Dockerfile .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
@@ -101,10 +109,10 @@ jobs:
     steps:
       - name: Build, tag, and push host image to Amazon ECR
         env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: host
-          IMAGE_TAG: ${{ steps.package_version.outputs.version }}
         run: |
+          ECR_REGISTRY=${{ needs.prepare.outputs.ecr_registry }}
+          IMAGE_TAG=${{ needs.prepare.outputs.image_tag }}
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f ./apps/host/Dockerfile .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
