--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -69,9 +69,13 @@ jobs:
 
 
       - name: Set outputs
+        id: output_values
         run: |
           echo "ecr_registry=${{ steps.login-ecr.outputs.registry }}" >> $GITHUB_ENV
           echo "image_tag=$(cat package.json | jq -r .version)" >> $GITHUB_ENV
+          echo "::set-output name=ecr_registry::${{ steps.login-ecr.outputs.registry }}"
+          echo "::set-output name=image_tag::$(cat package.json | jq -r .version)"
+
 
 
 
