--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -113,10 +113,10 @@ jobs:
     steps:
       - name: Build, tag, and push host image to Amazon ECR
         env:
+          ECR_REGISTRY: ${{ needs.prepare.outputs.ecr_registry }}
           ECR_REPOSITORY: host
+          IMAGE_TAG: ${{ needs.prepare.outputs.image_tag }}
         run: |
-          ECR_REGISTRY=${{ needs.prepare.outputs.ecr_registry }}
-          IMAGE_TAG=${{ needs.prepare.outputs.image_tag }}
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f ./apps/host/Dockerfile .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
