--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -44,6 +44,14 @@ jobs:
           git config user.email 'github-actions@github.com'
           git push git@github.com:${{ github.repository }} HEAD:${{ github.ref_name }}
 
+
+
+
+
+  build_server:
+    needs: prepare
+    runs-on: ubuntu-latest
+    steps:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -60,27 +68,12 @@ jobs:
         run: echo "::set-output name=version::$(cat package.json | jq -r .version)"
 
 
-      - name: Set outputs
-        id: output_values
-        run: |
-          echo "ecr_registry=${{ steps.login-ecr.outputs.registry }}" >> $GITHUB_ENV
-          echo "image_tag=$(cat package.json | jq -r .version)" >> $GITHUB_ENV
-          echo "::set-output name=ecr_registry::${{ steps.login-ecr.outputs.registry }}"
-          echo "::set-output name=image_tag::$(cat package.json | jq -r .version)"
-
-
-
-
-  build_server:
-    needs: prepare
-    runs-on: ubuntu-latest
-    steps:
       - name: Build, tag, and push server image to Amazon ECR
         env:
           ECR_REPOSITORY: server
         run: |
-          ECR_REGISTRY=${{ needs.prepare.outputs.ecr_registry }}
-          IMAGE_TAG=${{ needs.prepare.outputs.image_tag }}
+          ECR_REGISTRY=${{ steps.login-ecr.outputs.ecr_registry }}
+          IMAGE_TAG=${{ steps.login-ecr.outputs.image_tag }}
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f ./apps/server/Dockerfile .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
