--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -69,8 +69,8 @@ jobs:
 
       - name: Get version from package.json
         id: package_version
-        run: echo "::set-output name=version::$(cat package.json | jq -r .version)"
-
+        run: echo "version=$(cat package.json | jq -r .version)" >> $GITHUB_ENV
+      
       - name: Build, tag, and push server image to Amazon ECR
         env:
           ECR_REPOSITORY: server
